@@ -8,4 +8,4 @@ libsupport_la_SOURCES = \
 	rapi_buffer.h   rapi_buffer.c  \
 	rapi_context.h  rapi_context.c
 libsupport_la_CFLAGS = @DBUS_CFLAGS@ @HAL_CFLAGS@ -I$(top_srcdir)/lib/utils
-libsupport_la_LIBADD  = @DBUS_LIBS@ @HAL_LIBS@ $(top_builddir)/lib/utils/libsynce.la
+#libsupport_la_LIBADD  = @DBUS_LIBS@ @HAL_LIBS@ $(top_builddir)/lib/utils/libutils.la
