@@ -1,10 +1,10 @@
 INCLUDES = -I..
 
 ## create this library
-lib_LTLIBRARIES = libsynce.la
+noinst_LTLIBRARIES = libutils.la
 
 ## use these sources
-libsynce_la_SOURCES = \
+libutils_la_SOURCES = \
 	datetype.c \
 	errors.c \
 	files.c \
@@ -21,12 +21,11 @@ libsynce_la_SOURCES = \
 	wstr.c
 
 if IMPLEMENT_BSWAP_XX
-libsynce_la_SOURCES += bswap.c
+libutils_la_SOURCES += bswap.c
 endif
 
-libsynce_la_CFLAGS = @DBUS_CFLAGS@ @HAL_CFLAGS@
-libsynce_la_LDFLAGS = -no-undefined -version-info 0:0:0
-libsynce_la_LIBADD  = config/libconfig.la -lm @LTLIBICONV@ @LTLIBOBJS@ @DBUS_LIBS@ @HAL_LIBS@
+libutils_la_CFLAGS = @DBUS_CFLAGS@ @HAL_CFLAGS@
+libutils_la_LIBADD  = config/libconfig.la -lm @LTLIBICONV@ @LTLIBOBJS@ @DBUS_LIBS@ @HAL_LIBS@
 
 include_HEADERS = \
 	synce.h \
