@@ -1,13 +1,13 @@
 AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -Wall
 AM_CFLAGS = -I$(top_srcdir)/lib/utils -Wall
-AM_LDFLAGS = $(top_builddir)/lib/utils/libsynce.la
+AM_LDFLAGS = $(top_builddir)/lib/libsynce.la
 
 INCLUDES = -I$(top_srcdir)/lib/rapi
 
 noinst_PROGRAMS = CeRapiInvoke
 
 CeRapiInvoke_SOURCES = CeRapiInvoke.cc $(top_srcdir)/tools/pcommon.c
-CeRapiInvoke_LDADD = $(top_builddir)/lib/rapi/librapi.la
+CeRapiInvoke_LDADD = $(top_builddir)/lib/libsynce.la
 
 ##TESTS = CeRapiInvoke
 
