@@ -1,5 +1,5 @@
 AM_CXXFLAGS = -I$(top_srcdir)/lib/utils -Wall
-AM_LDFLAGS = $(top_builddir)/lib/utils/libsynce.la
+AM_LDFLAGS = $(top_builddir)/lib/libsynce.la
 
 INCLUDES = -I$(top_srcdir)/lib/rapi
 
