@@ -1,3 +1,7 @@
+2011-03-22  Mark Ellis  <mark@mpellis.org.uk>
+
+	* combine libsynce and librapi into a single library object
+
 2011-03-21  Mark Ellis  <mark@mpellis.org.uk>
 
 	* begin combining libsynce and librapi to form synce-core package
